# termysequence

./: .gitattributes  .gitignore  .gitmodules  ATTRIBUTIONS.html  CHANGELOG.md  CMakeLists.txt  LICENSE.spdx  README.md  common.h.in  config.h  gitinfo.h.in  gitinfo.sh  mkdist.sh  runcmake.sh
cmake/: FindCmocka.cmake  FindFuse.cmake  FindLibgit2.cmake  FindSQLite.cmake  FindSystemd.cmake  FindUtf8cpp.cmake  FindUuid.cmake  FindV8.cmake
doc/: CMakeLists.txt  connect.1.in  ctl.1.in  download.1.in  forwarder.1.in  gui.1.in  imgcat.1.in  imgls.1.in  monitor.1.in  pipe.1.in  query.1.in  server.1.in  setup.1.in  ssh.1.in  su.1.in  sudo.1.in  systemd.1.in
lib/: CMakeLists.txt  argv.cpp  argv.h  attr.h  attrstr.cpp  attrstr.h  base64.cpp  base64.h  clientshake.cpp  defcolors.h  endian.h  enums.h  exception.cpp  exception.h  exitcode.h  flags.h  grapheme.cpp  grapheme.h  handshake.h  machine.cpp  machine.h  palette.h  protocol.h  raw.cpp  raw.h  sequences.h  servershake.cpp  stringmap.h  term.cpp  term.h  termclient.cpp  trstr.h  types.h  unicode.cpp  unicode.h  unicode10impl.cpp  unicode10impl.hpp  unicode10tab.hpp  unicode12data.cpp  unicode12data.h  (+14 more)
mon/: CMakeLists.txt  addr.c  main.c  monitor.h  string.c  timeout.c
mon/fallback/: entry.c
mon/linux/: monitor.c
mon/linux-common/: addrtab.c  initial.c  mon-linux.h  netlink.c
mon/linux-sdbus/: hostname.c  mon-sdbus.h  monitor.c
mux/: CMakeLists.txt
mux/app/: args.cpp  args.h  connector.cpp  connector.h  forwarder.cpp  forwarder.h  main.cpp  query.cpp  run.cpp  run.h  translate.cpp
mux/base/: attributebase.cpp  attributebase.h  attributemap.h  baseproxy.cpp  baseproxy.h  basewatch.cpp  basewatch.h  buffer.cpp  buffer.h  cell.cpp  cell.h  clientmachine.cpp  clientmachine.h  codepoint.h  codestring.cpp  codestring.h  color.h  commands.cpp  conn.cpp  conn.h  connectbase.cpp  connectbase.h  connecttask.cpp  connecttask.h  connwatch.cpp  connwatch.h  cursor.h  downloadtask.cpp  downloadtask.h  emulator.cpp  emulator.h  eventstate.cpp  eventstate.h  exception.h  filemon.cpp  filemon.h  imagetask.cpp  imagetask.h  listener.cpp  listener.h  (+64 more)
mux/scripts/: ctl.sh.in  download.sh.in  imgcat.sh.in  imgls.sh.in  setup.sh.in  ssh.sh.in  su.sh.in  sudo.sh.in
mux/systemd/: scoper.cpp  scoper.h
mux/unit/: unit.service.in  unit.socket.in
mux/xterm/: base16.cpp  base16.h  charset.cpp  charset.h  charsets.h  edgebase.cpp  edgebase.h  edgecontrol.cpp  edgecontrol.h  edgemultinum.cpp  edgemultinum.h  edgesinglechar.cpp  edgesinglechar.h  edgesinglenum.cpp  edgesinglenum.h  edgesingletext.cpp  edgesingletext.h  graph.cpp  graph.h  machine.cpp  machine.h  nodebase.cpp  nodebase.h  savedcursor.h  xterm.cpp  xterm.h  xterm_mouse.cpp  xterm_os.cpp
os/: CMakeLists.txt  attr.cpp  attr.h  conn.cpp  conn.h  dir.cpp  dir.h  encoding.cpp  encoding.h  eventfd.h  fd.cpp  fd.h  filemon.h  forkpty.h  git.h  limits.cpp  limits.h  locale.cpp  locale.h  logging.cpp  logging.h  memdbg.h  plugins.h  process.cpp  process.h  pty.cpp  pty.h  signal.cpp  signal.h  status.h  sysinfo.h  time.h  user.cpp  user.h  wait.cpp  wait.h
os/dyn/: git.c  plugins.cpp
os/linux/: forkpty.cpp  identity.cpp  peercred.cpp  status.cpp  sysinfo.c  time.c
os/macos/: forkpty.cpp  identity.cpp  peercred.cpp  status.cpp  sysinfo.c  time.c
os/memdbg/: .gitignore  Makefile  memdbg.cpp  memdbg_so.c  test.cpp
src/: CMakeLists.txt  appdata.in  desktop.in  resource.qrc
src/app/: actions.cpp  actions.h  app.cpp  app.h  attr.cpp  attr.h  attrbase.h  color.h  config.h  customaction.cpp  customaction.h  datastore.cpp  datastore.h  defdircolors.hpp  deficon.hpp  defmap.cpp  defmap.h  deftheme.h  defthemes.hpp  enums.h  exception.cpp  exception.h  feature.cpp  feature.h  flags.h  format.h  fuseutil.h  iconbutton.cpp  iconbutton.h  icons.h  jsapi.cpp  keys.cpp  keys.h  logging.h  logwindow.cpp  logwindow.h  main.cpp  messagebox.cpp  messagebox.h  plugin.cpp  (+17 more)
src/base/: actdock.cpp  actfile.cpp  actjob.cpp  actprefs.cpp  actterm.cpp  actview.cpp  arrange.cpp  arrange.h  barwidget.cpp  barwidget.h  baseinline.cpp  baseinline.h  blank.cpp  blank.h  blinktimer.cpp  blinktimer.h  buffer.cpp  buffer.h  bufferbase.cpp  bufferbase.h  buffers.cpp  buffers.h  builder.h  cell.cpp  cell.h  conn.cpp  conn.h  connectstatus.cpp  connectstatus.h  connecttask.cpp  connecttask.h  contentmodel.cpp  contentmodel.h  dockwidget.cpp  dockwidget.h  downloadtask.cpp  downloadtask.h  dragicon.cpp  dragicon.h  effecttimer.cpp  (+201 more)
src/cli/: args.cpp  args.h  conn.cpp  conn.h  main.cpp
src/icontool/: app.cpp  app.h  dialog.cpp  dialog.h  iconmodel.cpp  iconmodel.h  log.cpp  log.h  main.cpp  settings.cpp  settings.h  setup.cpp  setup.h  status.cpp  status.h  thread.cpp  thread.h  viewitem.cpp  viewitem.h  window.cpp  window.h  workmodel.cpp  workmodel.h
src/settings/: aboutwindow.cpp  aboutwindow.h  actionwidget.cpp  actionwidget.h  adjustdialog.cpp  adjustdialog.h  alert.cpp  alert.h  alertmodel.cpp  alertmodel.h  alertwindow.cpp  alertwindow.h  base.cpp  base.h  basemacros.h  batchdialog.cpp  batchdialog.h  batchmodel.cpp  batchmodel.h  checkwidget.cpp  checkwidget.h  choicewidget.cpp  choicewidget.h  colordialog.cpp  colordialog.h  colorpreview.cpp  colorpreview.h  colorselect.cpp  colorselect.h  colorsmodel.cpp  colorsmodel.h  colorstab.cpp  colorstab.h  commanddialog.cpp  commanddialog.h  commandwidget.cpp  commandwidget.h  connect.cpp  connect.h  connectdialog.cpp  (+221 more)
src/setup/: systemdsetup.cpp  systemdsetup.h
test/: CMakeLists.txt  TermyClient.pm  attrparser.cpp  cellunit.h  client.pl  erase.cpp  eraserange.cpp  fillreplace.cpp  insert.cpp  mergechars.cpp  mockemulator.cpp  mockemulator.h  montecarlo.cpp  mousetest.c  osc515.sh  recalcitrant.c  remove.cpp  removechar.cpp  replace.cpp  simpleupdate.cpp  slowreader.c  soaktest.pl  splitchar.cpp  substr.cpp  testtool.cpp  ttdemo.txt  unidraw.cpp  util.h
util/: CMakeLists.txt  Uniset.pm  Unitable.pm  en_US.txt  extract.c  m.sh  r.sh  scoursvg.sh  uniset.pl  unitable.pl
