# Copyright © 2018 TermySequence LLC
#
# SPDX-License-Identifier: GPL-2.0-only

IF (CMAKE_C_COMPILER_ID STREQUAL "GNU")
  SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -flto")
ENDIF()

LIST(APPEND monitor_GLOBS *.c)

IF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  IF (USE_SYSTEMD)
    LIST(APPEND monitor_GLOBS linux-sdbus/*.c)
  ELSE()
    LIST(APPEND monitor_GLOBS linux/*.c)
  ENDIF()
  LIST(APPEND monitor_GLOBS linux-common/*.c)
ELSE()
  LIST(APPEND monitor_GLOBS fallback/*.c)
ENDIF()

FILE(GLOB monitor_SOURCES ${monitor_GLOBS})

ADD_EXECUTABLE(${MONITOR_NAME} ${monitor_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${MONITOR_NAME} BEFORE PRIVATE .)
TARGET_LINK_LIBRARIES(${MONITOR_NAME} osc)
IF (USE_SYSTEMD)
  TARGET_LINK_LIBRARIES(${MONITOR_NAME} l::Systemd)
ENDIF()

INSTALL(TARGETS ${MONITOR_NAME} DESTINATION bin)
