# Copyright © 2018 TermySequence LLC
#
# SPDX-License-Identifier: GPL-2.0-only

FIND_PACKAGE(LibXml2 REQUIRED)

ADD_EXECUTABLE(extract extract.c)
TARGET_INCLUDE_DIRECTORIES(extract PRIVATE ${LIBXML2_INCLUDE_DIR})
TARGET_COMPILE_OPTIONS(extract PRIVATE ${LIBXML2_DEFINITIONS})
TARGET_LINK_LIBRARIES(extract ${LIBXML2_LIBRARIES})

ADD_CUSTOM_TARGET(extract-translations
  COMMAND util/extract ${CMAKE_SOURCE_DIR}
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
  )
